--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -8828,22 +8828,10 @@
         "myTrain.show_speed()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZHtqnB5WQ5D2",
-        "outputId": "1f7fe0e3-e011-4629-e385-bf1016580c88"
+        "id": "ZHtqnB5WQ5D2"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Current speed of my Regional  train is -200 miles an hour\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8894,22 +8882,10 @@
         "myTrain.show_speed()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TsLVO5IjSnFq",
-        "outputId": "cd30a899-f4b8-41cd-dd50-e4d1b4701df1"
+        "id": "TsLVO5IjSnFq"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Current speed of my High-speed  train is 0 miles an hour\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -9031,22 +9007,10 @@
         "print(myDog.__dict__)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xTGElYfu-9Zz",
-        "outputId": "bb52868d-9603-4d4e-a0c9-0bdb3c71137c"
+        "id": "xTGElYfu-9Zz"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'name': 'Sniffer'}\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -9256,6 +9220,38 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "Method Resolution Order (MRO) is the order in which Python looks for a method or attribute when it is called on an instance of a class that involves inheritance. It becomes especially important in cases of multiple inheritance.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Syntax:\n",
+        "\n",
+        "        Class Name._ _ mro _ _\n",
+        "                  "
+      ],
+      "metadata": {
+        "id": "2yqf8aTgcglL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7.5 Diamond problem\n",
+        "---\n",
+        " There is a specific issue when you deal with multiple inheritance, it is called a diamond problem. A one class inherits from two classes that both inherits from a common superclass. This can call ambiguity in the Method Resolutin Order (MRO). Which method gets called when a method is invoked.  \n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "_Nen3mYyaTGt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         " 7.5  Method overriding\n",
         "---\n",
         "Method overriding provides a subclass to define a method that has alredy being\n",
@@ -9354,23 +9350,10 @@
         "animalSpeak(myCat)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Xw1a5OiHMZSc",
-        "outputId": "f8be4960-18db-4e9d-8b68-5469448b1714"
+        "id": "Xw1a5OiHMZSc"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Woof, Woof!\n",
-            "Meow, Meow!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
