--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -4455,7 +4455,7 @@
       "source": [
         "4.1 if ... statements\n",
         "---\n",
-        "The if statement is used to check against some conditions along the code. There are three forms of the if statements in Python that can be used: if, if ... else, if ... elif ... else.\n",
+        "The if statements are used to execute code based on specific conditions. They allow your program to make decisions and respond accordingly. There are three main forms of conditional statements. These structures let you execute your code if the condition is true, add an alternative block to run when condition is false, and allow to check multiple conditions in sequence, running the first one that is true.\n",
         "\n",
         "---\n",
         "\n",
@@ -4577,7 +4577,7 @@
       "source": [
         "if ... statement with comparison operators\n",
         "---\n",
-        "The if statements are used to check against some conditions along the code. Here a few examples of the if ... statement with comparison operators.\n",
+        "The if statements are used to check against some conditions along the code. Here a few examples of the if ... statement with comparison operators. Python provides several comparison operators that can be used with if statements as we discussed in Section 2.\n",
         "\n",
         "---"
       ],
@@ -4616,6 +4616,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note"
+      ],
+      "metadata": {
+        "id": "cZgYJEDjPWdX"
+      }
     },
     {
       "cell_type": "code",
