--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -74,7 +74,9 @@
         "\n",
         "Section 8: **Exceptions**\n",
         "\n",
-        "Section 9: **Input and output (I/O) operations**"
+        "Section 9: **Input and output (I/O) operations**\n",
+        "\n",
+        "Section 10: **Miscellaneous**"
       ],
       "metadata": {
         "id": "Ptut8gykhIuv"
@@ -112,7 +114,7 @@
       "source": [
         "1.1 Print function\n",
         "---\n",
-        "The print function allows you to print data to the screen. We are going to use the print function a lot and that is why I would like you to get familiar with this function first.\n",
+        "The print() function is used to display output on the screen. We will use it frequently to check values, debug your code, and show your results. That is why I would like you to get familiar with this function first.\n",
         "\n",
         "---\n",
         "Syntax:\n",
@@ -139,7 +141,7 @@
       "source": [
         "1.2 Comments\n",
         "---\n",
-        "Comments are important in the process of programming. It is encouraged to leave comments inside of your code so that others may understand the code better. Comments in Python are made using a ( # ) sign to comment on a single line and using three single quotes ( ' ' ' ) or three double quotes ( \" \" \" ) to comment on multiple lines.\n",
+        "Comments are an essential part of programming. It is encouraged to leave comments inside of your code, making it easier for others to understand your code. Comments in Python are made using a ( # ) sign to comment on a single line and using three single quotes ( ' ' ' ) or three double quotes ( \" \" \" ) to comment on multiple lines. Triple-quoted strings are technically string literals, not true comments. They are often used for docstrings (documentation strings) inside functions, classes, and modules.\n",
         "\n",
         "---\n",
         "Syntax:\n",
@@ -162,22 +164,10 @@
         "print(\"Hello, World!\")"
       ],
       "metadata": {
-        "id": "EzgnB7SAF2Hs",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9f61f33b-4453-41c8-ecb5-3a02e95bdacb"
+        "id": "EzgnB7SAF2Hs"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello, World!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -191,22 +181,10 @@
         "print(\"Hello, World!\")"
       ],
       "metadata": {
-        "id": "d0bAZiB2FzEQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "68383f5c-2f15-4ecc-9985-7c25d47ee97d"
+        "id": "d0bAZiB2FzEQ"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello, World!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -220,22 +198,10 @@
         "print(\"Hello, World!\")"
       ],
       "metadata": {
-        "id": "oVfXjlu-GHb3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a2181672-6b6e-45c2-ebda-333ae94e85d8"
+        "id": "oVfXjlu-GHb3"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello, World!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -243,7 +209,7 @@
         "Note\n",
         "\n",
         "---\n",
-        "Professional programmers include comments to the header of each file, listing the author, date, a description of the code, some other important information, and any updates that have been made. See example below.\n",
+        "Professional programmers often include a header comment at the top of each source code file. This section provides essential information such as author's name, creation date, a brief description of the code, version or update history, license or contact information, and other important information. See example below.\n",
         "\n",
         "---"
       ],
