--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -126,6 +126,16 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "___"
+      ],
+      "metadata": {
+        "id": "oWOB0ZutTBiJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(\"Hello, World!\")"
