--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -128,8 +128,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples\n",
-        "___"
+        "Examples:\n",
+        "\n",
+        "---"
       ],
       "metadata": {
         "id": "oWOB0ZutTBiJ"
@@ -164,6 +165,17 @@
       ],
       "metadata": {
         "id": "P735N2xU0feW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "kJ3NhuG0T-MR"
       }
     },
     {
@@ -264,6 +276,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        " Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "f8JD139EUCIF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Illegal declaration of variables\n",
@@ -339,14 +362,25 @@
         "\n",
         "   **Snake Case** - each word is connected by underscore.\n",
         "\n",
+        "---\n",
+        "\n",
         "   Syntax:\n",
         "\n",
-        "        my_variable_name\n",
-        "\n",
-        "---\n"
+        "        my_variable_name\n"
       ],
       "metadata": {
         "id": "KbhL2URwEWcM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "z9INaDFyUF1r"
       }
     },
     {
@@ -400,13 +434,23 @@
         "Note\n",
         "\n",
         "---\n",
-        "Variables are created and initialized when you first assign a value to them.  \n",
-        "There are various ways to assign values to variables in Python.\n",
+        "Variables are created and initialized when you first assign a value to them. Unlike some other programming languages, you do not need to declare the type of the variable beforehand. Python will automatically determine the type of a variable based on the assigned value. There are various ways to assign values to variables in Python.\n",
         "\n",
         "---"
       ],
       "metadata": {
         "id": "WjnMkWGKqB4b"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "fhoa4iuvaUM8"
       }
     },
     {
@@ -421,24 +465,10 @@
         "print(z)"
       ],
       "metadata": {
-        "id": "6PUy49h1Ov7F",
-        "outputId": "8e00cce1-b53d-4b4f-b25b-fb0d049af4ce",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "6PUy49h1Ov7F"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "23.4\n",
-            "35.6\n",
-            "45.1\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -452,24 +482,10 @@
         "print(stateID)"
       ],
       "metadata": {
-        "id": "utu2h8QPPpog",
-        "outputId": "736ac7c9-246e-4e50-e313-dbe9fa1eb926",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "utu2h8QPPpog"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "23.4\n",
-            "Carbon\n",
-            "True\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -483,24 +499,10 @@
         "print(z)"
       ],
       "metadata": {
-        "id": "cxAe_TDSQGy2",
-        "outputId": "0ded8136-25a8-4cb8-bdd1-0466bd76a43a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "cxAe_TDSQGy2"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2.25\n",
-            "2.25\n",
-            "2.25\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -515,24 +517,10 @@
         "print(z)"
       ],
       "metadata": {
-        "id": "x5i3eTHMQerG",
-        "outputId": "e3448639-ccca-4b47-8c65-113fc1e1789e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "x5i3eTHMQerG"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2.35\n",
-            "6.37\n",
-            "-8.94\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -540,12 +528,27 @@
         "Note\n",
         "\n",
         "---\n",
-        "To delete a variable you need to use the del statement.\n",
+        "Variables are references to objects, and while you can reassign them or modify their content, sometimes you might need to remove them or delete an object from memory. To delete a variable you need to use the del statement.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "   Syntax:\n",
+        "\n",
+        "        del my_variable_name\n"
+      ],
+      "metadata": {
+        "id": "fSxKgaAjtrx9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
         "\n",
         "---"
       ],
       "metadata": {
-        "id": "fSxKgaAjtrx9"
+        "id": "2BaeD6FPZTW1"
       }
     },
     {
@@ -559,22 +562,10 @@
         "del myTenthVariable\n"
       ],
       "metadata": {
-        "id": "lRo1hsnza_fH",
-        "outputId": "0db71a2c-1361-422c-e0ef-cf32abe36dfe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "lRo1hsnza_fH"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "65\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -636,6 +627,17 @@
       ],
       "metadata": {
         "id": "vZjpDP7dYq5-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "oantEs0JUfLU"
       }
     },
     {
@@ -739,6 +741,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "Vu6WRXQIbYL8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Example of literals\n",
@@ -796,6 +809,17 @@
       ],
       "metadata": {
         "id": "pzwaES8qVO_z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "Ayr4Kj76bgj7"
       }
     },
     {
@@ -912,7 +936,7 @@
       "source": [
         "1.7 Casting\n",
         "---\n",
-        "Casting is a conversion from one data type to another data type. There can be implicit conversions or explicit conversions using built-in functions. Explicit conversions can be performed with built-in functions like int(), float(), or str() as they act like constructors of different data types.\n",
+        "Casting refers to the process of converting a value from one data to another. This is useful when you need to perform operations that require a specific type. There can be implicit conversions or explicit conversions using built-in functions. Explicit conversions can be performed with built-in functions like int(), float(), or str() as they act like constructors of different data types.\n",
         "\n",
         "---\n",
         "\n",
@@ -922,6 +946,17 @@
       ],
       "metadata": {
         "id": "ui1wtk7V1BaN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "pdRLy1yIbyzE"
       }
     },
     {
@@ -987,12 +1022,23 @@
       "source": [
         "1.8 Boolean\n",
         "---\n",
-        "Booleans can be either True or False. True corresponds to the value of 1 and False corresponds to the value of 0. Please, keep in mind that **True** is not the same as **TRUE** or **true**. Similarly, **False** is not the same as **FALSE** or **false**.\n",
+        "Booleans can be either True or False. True corresponds to the value of 1 and False corresponds to the value of 0. Please, keep in mind that **True** is not the same as **TRUE** or **true**. Similarly, **False** is not the same as **FALSE** or **false**. Booleans are often used in conditionals, comparisons, and logical operations.\n",
         "\n",
         "---\n"
       ],
       "metadata": {
         "id": "w3eG246wLZ2Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "R-qbbh1pb3mz"
       }
     },
     {
@@ -1024,6 +1070,34 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Boolean + number example\n",
+        "\n",
+        "print(True + 1)\n",
+        "print(False + 1)"
+      ],
+      "metadata": {
+        "id": "KqMMGcRhjj99"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Boolean == number\n",
+        "\n",
+        "print(True == 1)\n",
+        "print(False == 0)"
+      ],
+      "metadata": {
+        "id": "6XWESFURj04z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "1.9 Strings\n",
@@ -1041,6 +1115,17 @@
       ],
       "metadata": {
         "id": "J1qJwmTj40sQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "dw9pfuODb6xe"
       }
     },
     {
@@ -1194,6 +1279,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "cQy0x_aWb_BM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Strings elements can be accessed by their index\n",
@@ -1238,6 +1334,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "2gF1Bl6KcDL1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Strings elements can be accessed by index\n",
@@ -1270,12 +1377,23 @@
       "source": [
         "String methods\n",
         "---\n",
-        "There are many built-in methods that can be used on strings.\n",
+        "String are one of the most commonly used data types in Python. To help you work woth them efficiently, Pyhton provides many built-in methods that allow you to perform a variety of operations on string values. Here are some widely used string methods with examples.\n",
         "\n",
         "---"
       ],
       "metadata": {
         "id": "qAAUwj_l9kBL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "yhSXWcjicHgF"
       }
     },
     {
@@ -1371,12 +1489,23 @@
       "source": [
         "String operations\n",
         "---\n",
-        "Some basic operations can be performed on strings.\n",
+        "Some basic operations can be performed on strings. These operations include concatenation (+), repetition (*), indexing ([]), slicing ([:]), and checking membership (in). These operations allow you to combine, repeat, access, and manipulate parts of a string efficiently in Python.\n",
         "\n",
         "---"
       ],
       "metadata": {
         "id": "DvltvXr_7odu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "9FCXi3TNdJLz"
       }
     },
     {
@@ -1442,6 +1571,73 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# String indexing\n",
+        "\n",
+        "myTestString=\"Lorem ipsum dolor sit amet\"\n",
+        "\n",
+        "print(myTestString[4])\n",
+        "print(myTestString[5])\n",
+        "print(myTestString[6])\n",
+        "print(myTestString[18])\n",
+        "print(myTestString[-1])"
+      ],
+      "metadata": {
+        "id": "wg9JyDu_eah-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# String slicing\n",
+        "\n",
+        "myTestString=\"Lorem ipsum dolor sit amet\"\n",
+        "\n",
+        "print(myTestString[:4])\n",
+        "print(myTestString[0:5])\n",
+        "print(myTestString[0:6])\n",
+        "print(myTestString[0:18])"
+      ],
+      "metadata": {
+        "id": "XEQCru6Oe358"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# String membership\n",
+        "\n",
+        "myTestString=\"Lorem ipsum dolor sit amet\"\n",
+        "\n",
+        "print(\"Lorem\" in myTestString)\n",
+        "print(\"lorem\" in myTestString)"
+      ],
+      "metadata": {
+        "id": "fnMU6-KnfL5E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note:\n",
+        "\n",
+        "---\n",
+        "The \"Lorem ipsum dolor sit amet ...\" is not random Latin, it is a scrambled section of a passage from Cicero's writings in 45 BC. Its use became widespread in the 1960s with typesetting software. This passage is used to focus on layout and design elements rather than readable content. It is a placeholder text commonly used in publishing graphic design, and web development to fill a space on a page and give an impression of how the final text will look. It is known as \"dummy text\".\n",
+        "\n",
+        "\"*Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.*\""
+      ],
+      "metadata": {
+        "id": "ZnDqUnkCfWFA"
+      }
     },
     {
       "cell_type": "markdown",
