--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -157,14 +157,28 @@
         "---\n",
         "Syntax:\n",
         "\n",
-        "        #     Lorem ipsum dolor sit amet, consectetur\n",
+        "            # Lorem ipsum dolor sit amet ...\n",
         "        \n",
-        "        '''   Lorem ipsum dolor sit amet, consectetur   '''\n",
+        "          ''' Lorem ipsum dolor sit amet ... '''\n",
         "\n",
-        "        \" \" \" Lorem ipsum dolor sit amet, consectetur \" \" \""
+        "        \" \" \" Lorem ipsum dolor sit amet ... \" \" \""
       ],
       "metadata": {
         "id": "P735N2xU0feW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "The \"Lorem ipsum dolor sit amet ...\" is not random Latin, it is a scrambled section of a passage from Cicero's writings in 45 BC. Its use became widespread in the 1960s with typesetting software. This passage is used to focus on layout and design elements rather than readable content. It is a placeholder text commonly used in publishing graphic design, and web development to fill a space on a page and give an impression of how the final text will look. It is known as \"dummy text\".\n",
+        "\n",
+        "\"*Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.*\""
+      ],
+      "metadata": {
+        "id": "ZnDqUnkCfWFA"
       }
     },
     {
@@ -345,6 +359,8 @@
       "cell_type": "markdown",
       "source": [
         "Note\n",
+        "\n",
+        "There are naming conventions that are commonly used in programming to make variable, function, and class names easier to read. You can use any of these three conventions to develop your code. However, class names should start with a capital letter or using Pascal case.\n",
         "\n",
         "---\n",
         "\n",
@@ -709,7 +725,7 @@
         "1.5 Literals\n",
         "---\n",
         "\n",
-        "Literals are data that are assigned to the variables or constants when they are declared. In other words, it is a fixed value. There are five types of literals in Python: Numeric literals, Boolean literals, String literals, Collection literals, and Special literal.\n",
+        "Literals are data that are assigned to the variables or constants when they are declared. In other words, it is a fixed value. There are five types of literals in Python: Numeric literals, Boolean literals, String literals, Collection literals, and Special literals. Literals are not the same as objects, but they create objects. Variables refer to or point to those objects. Python creates an object in memory to represent a literal, when a literal is assigned to a variable. Everything in Python is an object. In fact, every object in Python is an instance of a class.\n",
         "\n",
         "---"
       ],
@@ -797,6 +813,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Literals are not the same as objects, but they create objects. Variables refer to or point to those objects. Everything in Python is an object. Python language creates an object in memory to represent the literal. The literal value is an object of a class. Each object is an instance of a class. Every value is an instance of a class. Each class defines the behavior of its instances.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "3odxGZvXnBm_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "1.6 Numbers\n",
         "---\n",
         "Primary numeric data types in Python are integers, floating-point numbers, and complex numbers.\n",
@@ -851,6 +882,17 @@
       ],
       "metadata": {
         "id": "cGt6kilef_tk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "76xdEJHf4L-o"
       }
     },
     {
@@ -936,7 +978,7 @@
       "source": [
         "1.7 Casting\n",
         "---\n",
-        "Casting refers to the process of converting a value from one data to another. This is useful when you need to perform operations that require a specific type. There can be implicit conversions or explicit conversions using built-in functions. Explicit conversions can be performed with built-in functions like int(), float(), or str() as they act like constructors of different data types.\n",
+        "Casting refers to the process of converting a value from one data type to another. This is useful when you need to perform operations that require a specific type. There can be implicit conversions or explicit conversions using built-in functions. Explicit conversions can be performed with built-in functions like int(), float(), or str() as they act like constructors of different data types.\n",
         "\n",
         "---\n",
         "\n",
@@ -1628,20 +1670,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Note:\n",
-        "\n",
-        "---\n",
-        "The \"Lorem ipsum dolor sit amet ...\" is not random Latin, it is a scrambled section of a passage from Cicero's writings in 45 BC. Its use became widespread in the 1960s with typesetting software. This passage is used to focus on layout and design elements rather than readable content. It is a placeholder text commonly used in publishing graphic design, and web development to fill a space on a page and give an impression of how the final text will look. It is known as \"dummy text\".\n",
-        "\n",
-        "\"*Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.*\""
-      ],
-      "metadata": {
-        "id": "ZnDqUnkCfWFA"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# Section 2: Operators\n",
         "\n",
         "2.1 Arithmetic operators\n",
@@ -1680,6 +1708,17 @@
       ],
       "metadata": {
         "id": "RL1xNU8wkmfW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "45UokmtUxXAu"
       }
     },
     {
@@ -1870,12 +1909,37 @@
       "source": [
         "Assignment operators\n",
         "---\n",
+        "Assignment operators are used to assign values to variables. Python language also supports compound assignment operators that combine assignment with arithmetic or bitwise operations.\n",
+        "\n",
         "Assignment: =, +=, -=, * =, /=, //=, %=, **=, :=\n",
         "\n",
-        "---\n"
+        "---\n",
+        "Syntax:\n",
+        "\n",
+        "     myVar =  value\n",
+        "\n",
+        "     myVar += value         \n",
+        "\n",
+        "     myVar *= value\n",
+        "\n",
+        "     .\n",
+        "     .\n",
+        "     .\n",
+        "     myVar %= value\n"
       ],
       "metadata": {
         "id": "QvjMM-n7jVuT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "mQHmnU28xdsl"
       }
     },
     {
@@ -2034,6 +2098,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "pd1rdSEPzgHq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Equal operator: ==\n",
@@ -2184,6 +2259,7 @@
       "source": [
         "2.3 Logical operators\n",
         "---\n",
+        "Logical operators are used to perform Boolean algebra and combine multiple conditional expressions. These operators return True or False based on the logical relationship between the expressions they are evaluating.\n",
         "\n",
         "* and\n",
         "* or\n",
@@ -2193,6 +2269,17 @@
       ],
       "metadata": {
         "id": "1xRwfWZDAcXC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "dIKTy2OBzq49"
       }
     },
     {
@@ -2259,6 +2346,17 @@
       ],
       "metadata": {
         "id": "HE3jpEcklKOm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "DoGYZir50WtW"
       }
     },
     {
@@ -2364,7 +2462,11 @@
       "cell_type": "markdown",
       "source": [
         "Note:\n",
-        "when you have a number greater than 255, you will need more than 1 byte, max value 255 (in decimal), anything larger than 255 requires more bytes. Each byte can hold value from 0-255.  If you have a large number you can represent it with more than 1 byte. 0-255 - one byte, 256-65535 2 bytes, 65536-16777215 3 bytes etc. 500 -> needs two bytes: 0000000111110100 (9 bits)."
+        "\n",
+        "---\n",
+        "When you have a number greater than 255, you will need more than 1 byte, max value 255 (in decimal), anything larger than 255 requires more bytes. Each byte can hold value from 0-255.  If you have a large number you can represent it with more than 1 byte. 0-255 - one byte, 256-65535 2 bytes, 65536-16777215 3 bytes etc. 500 -> needs two bytes: 0000000111110100 (9 bits).\n",
+        "\n",
+        "---"
       ],
       "metadata": {
         "id": "fGvbQQzcvlrh"
@@ -2382,6 +2484,17 @@
       ],
       "metadata": {
         "id": "cEYesb7BC1S_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "Ds89kAUB0nT5"
       }
     },
     {
@@ -2469,6 +2582,7 @@
       "source": [
         "2.5 Identity operators\n",
         "---\n",
+        "Identity operators are used to compare the memory location or identity of two objects. Unlike comparison operators, the identity operators check whether two objects are the same object in memory.\n",
         "\n",
         "*   is\n",
         "*   is not\n",
@@ -2477,6 +2591,17 @@
       ],
       "metadata": {
         "id": "CRZIby6Oovxw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "gO2njGIL093X"
       }
     },
     {
@@ -2496,25 +2621,10 @@
         "print(\"Printing memory addresses :\", id(myFirstVariable), id(myThirdVariable) )"
       ],
       "metadata": {
-        "id": "0yJO9gTcpr6R",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "43c62b7c-d6db-44e2-82f8-8b154aaf52b4"
+        "id": "0yJO9gTcpr6R"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "False\n",
-            "True\n",
-            "Printing memory addresses : 133841023586992 133841023587376\n",
-            "Printing memory addresses : 133841023586992 133841023586992\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2533,31 +2643,17 @@
         "print(\"Printing memory addresses :\", id(myFirstVariable), id(myThirdVariable) )"
       ],
       "metadata": {
-        "id": "FatrHFI-tA0A",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8e90ed57-6e24-4439-849b-90910d3d52f8"
+        "id": "FatrHFI-tA0A"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n",
-            "False\n",
-            "Printing memory addresses : 133841023589744 133841023583920\n",
-            "Printing memory addresses : 133841023589744 133841023589744\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "2.6 Membership operators\n",
         "---\n",
+        "Membership operators are used to test whether a value is a member of a sequence. These operators are very useful when you want to check if a certain element exists inside a collection, such as a list, string, or set.\n",
         "\n",
         "*   in\n",
         "*   not in\n",
@@ -2567,6 +2663,17 @@
       ],
       "metadata": {
         "id": "FEbV2Yyc1Rr-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "5plYuyUY2YJC"
       }
     },
     {
@@ -2702,6 +2809,17 @@
       ],
       "metadata": {
         "id": "JoV2j1LVNmPS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples:\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "mSsCPOOJ3cYj"
       }
     },
     {
@@ -4641,19 +4759,6 @@
       ],
       "metadata": {
         "id": "Y8cow2CiOU7l"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "if ... statement\n",
-        "---\n",
-        "The if statement is used to check against some conditions along the code.\n",
-        "\n",
-        "---"
-      ],
-      "metadata": {
-        "id": "l69FxLYG2rtw"
       }
     },
     {
