--- a/day4/2025_gradient_descent_y_fx.ipynb
+++ b/day4/2025_gradient_descent_y_fx.ipynb
@@ -111,9 +111,9 @@
       },
       "source": [
         "# calculate the derivative of f(x)\n",
-        "def df(x):\n",
-        "    # what is the derivative of f(x) ?\n",
-        "    return 2*(x-1);"
+        "#def df(x):\n",
+        "#    # what is the derivative of f(x) ?\n",
+        "#    return 2*(x-1);"
       ],
       "execution_count": 4,
       "outputs": []
@@ -170,7 +170,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d30e0483-a8ec-49f0-e28c-a482097bb2e9"
+        "outputId": "e25feb99-11b6-4d25-f57b-21285000a357"
       },
       "source": [
         "xv, yv = gradient_descent(start_at = np.random.uniform(2,2), iterations = 30, learning_rate=0.1)\n",
@@ -221,7 +221,7 @@
           "height": 430
         },
         "id": "TLykPdl-wqkK",
-        "outputId": "ca1589d4-17ac-4db8-c2f8-fab635e1f484"
+        "outputId": "80e561cb-4a4f-4715-e412-a4e0cc6d2cf5"
       },
       "source": [
         "fig, ax = plt.subplots()\n",
@@ -272,7 +272,7 @@
           "height": 578
         },
         "id": "aMZpgTXW0dnK",
-        "outputId": "6251894a-11d6-42f5-ee37-3ae3dfb085d8"
+        "outputId": "126315ee-c1a1-4223-8917-59127c7fd994"
       },
       "source": [
         "# create animation using the animate() function\n",
@@ -287,7 +287,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.animation.FuncAnimation at 0x7a0db1ee6610>"
+              "<matplotlib.animation.FuncAnimation at 0x7c8f92d52910>"
             ],
             "text/html": [
               "\n",
@@ -475,42 +475,42 @@
               "</style>\n",
               "\n",
               "<div class=\"animation\">\n",
-              "  <img id=\"_anim_imga17f63cd415b46a2983bd05a84092116\">\n",
+              "  <img id=\"_anim_img5098619678a342909a5bfbf0dbe347f7\">\n",
               "  <div class=\"anim-controls\">\n",
-              "    <input id=\"_anim_slidera17f63cd415b46a2983bd05a84092116\" type=\"range\" class=\"anim-slider\"\n",
+              "    <input id=\"_anim_slider5098619678a342909a5bfbf0dbe347f7\" type=\"range\" class=\"anim-slider\"\n",
               "           name=\"points\" min=\"0\" max=\"1\" step=\"1\" value=\"0\"\n",
-              "           oninput=\"anima17f63cd415b46a2983bd05a84092116.set_frame(parseInt(this.value));\">\n",
+              "           oninput=\"anim5098619678a342909a5bfbf0dbe347f7.set_frame(parseInt(this.value));\">\n",
               "    <div class=\"anim-buttons\">\n",
-              "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anima17f63cd415b46a2983bd05a84092116.slower()\">\n",
+              "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim5098619678a342909a5bfbf0dbe347f7.slower()\">\n",
               "          <i class=\"fa fa-minus\"></i></button>\n",
-              "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anima17f63cd415b46a2983bd05a84092116.first_frame()\">\n",
+              "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim5098619678a342909a5bfbf0dbe347f7.first_frame()\">\n",
               "        <i class=\"fa fa-fast-backward\"></i></button>\n",
-              "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anima17f63cd415b46a2983bd05a84092116.previous_frame()\">\n",
+              "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim5098619678a342909a5bfbf0dbe347f7.previous_frame()\">\n",
               "          <i class=\"fa fa-step-backward\"></i></button>\n",
-              "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anima17f63cd415b46a2983bd05a84092116.reverse_animation()\">\n",
+              "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim5098619678a342909a5bfbf0dbe347f7.reverse_animation()\">\n",
               "          <i class=\"fa fa-play fa-flip-horizontal\"></i></button>\n",
-              "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anima17f63cd415b46a2983bd05a84092116.pause_animation()\">\n",
+              "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim5098619678a342909a5bfbf0dbe347f7.pause_animation()\">\n",
               "          <i class=\"fa fa-pause\"></i></button>\n",
-              "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anima17f63cd415b46a2983bd05a84092116.play_animation()\">\n",
+              "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim5098619678a342909a5bfbf0dbe347f7.play_animation()\">\n",
               "          <i class=\"fa fa-play\"></i></button>\n",
-              "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anima17f63cd415b46a2983bd05a84092116.next_frame()\">\n",
+              "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim5098619678a342909a5bfbf0dbe347f7.next_frame()\">\n",
               "          <i class=\"fa fa-step-forward\"></i></button>\n",
-              "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anima17f63cd415b46a2983bd05a84092116.last_frame()\">\n",
+              "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim5098619678a342909a5bfbf0dbe347f7.last_frame()\">\n",
               "          <i class=\"fa fa-fast-forward\"></i></button>\n",
-              "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anima17f63cd415b46a2983bd05a84092116.faster()\">\n",
+              "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim5098619678a342909a5bfbf0dbe347f7.faster()\">\n",
               "          <i class=\"fa fa-plus\"></i></button>\n",
               "    </div>\n",
-              "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_selecta17f63cd415b46a2983bd05a84092116\"\n",
+              "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select5098619678a342909a5bfbf0dbe347f7\"\n",
               "          class=\"anim-state\">\n",
-              "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_a17f63cd415b46a2983bd05a84092116\"\n",
+              "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_5098619678a342909a5bfbf0dbe347f7\"\n",
               "             checked>\n",
-              "      <label for=\"_anim_radio1_a17f63cd415b46a2983bd05a84092116\">Once</label>\n",
-              "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_a17f63cd415b46a2983bd05a84092116\"\n",
+              "      <label for=\"_anim_radio1_5098619678a342909a5bfbf0dbe347f7\">Once</label>\n",
+              "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_5098619678a342909a5bfbf0dbe347f7\"\n",
               "             >\n",
-              "      <label for=\"_anim_radio2_a17f63cd415b46a2983bd05a84092116\">Loop</label>\n",
-              "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_a17f63cd415b46a2983bd05a84092116\"\n",
+              "      <label for=\"_anim_radio2_5098619678a342909a5bfbf0dbe347f7\">Loop</label>\n",
+              "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_5098619678a342909a5bfbf0dbe347f7\"\n",
               "             >\n",
-              "      <label for=\"_anim_radio3_a17f63cd415b46a2983bd05a84092116\">Reflect</label>\n",
+              "      <label for=\"_anim_radio3_5098619678a342909a5bfbf0dbe347f7\">Reflect</label>\n",
               "    </form>\n",
               "  </div>\n",
               "</div>\n",
@@ -520,9 +520,9 @@
               "  /* Instantiate the Animation class. */\n",
               "  /* The IDs given should match those used in the template above. */\n",
               "  (function() {\n",
-              "    var img_id = \"_anim_imga17f63cd415b46a2983bd05a84092116\";\n",
-              "    var slider_id = \"_anim_slidera17f63cd415b46a2983bd05a84092116\";\n",
-              "    var loop_select_id = \"_anim_loop_selecta17f63cd415b46a2983bd05a84092116\";\n",
+              "    var img_id = \"_anim_img5098619678a342909a5bfbf0dbe347f7\";\n",
+              "    var slider_id = \"_anim_slider5098619678a342909a5bfbf0dbe347f7\";\n",
+              "    var loop_select_id = \"_anim_loop_select5098619678a342909a5bfbf0dbe347f7\";\n",
               "    var frames = new Array(31);\n",
               "    \n",
               "  frames[0] = \"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAoAAAAHgCAYAAAA10dzkAAAAOnRFWHRTb2Z0d2FyZQBNYXRwbG90\\\n",
@@ -12332,7 +12332,7 @@
               "    /* set a timeout to make sure all the above elements are created before\n",
               "       the object is initialized. */\n",
               "    setTimeout(function() {\n",
-              "        anima17f63cd415b46a2983bd05a84092116 = new Animation(frames, img_id, slider_id, 800.0,\n",
+              "        anim5098619678a342909a5bfbf0dbe347f7 = new Animation(frames, img_id, slider_id, 800.0,\n",
               "                                 loop_select_id);\n",
               "    }, 0);\n",
               "  })()\n",
